syntax = "proto3";

package def.matching;

option java_package = "com.game.match.proto";
option java_outer_classname = "ErrorCodeProtos";
option java_multiple_files = true;

enum ERROR_CODE {
    EMPTY = 0;
}